--- a/latihan1.html
+++ b/latihan1.html
@@ -12,7 +12,7 @@
   <p>Jurusan: TKJ</p>
   <ul>Social media button CSS
   <li>Instagram: ericvariann_</li>
-  <button>09880995248</button>
+  <a href="https://wa.me/62990995248" ><button>Contact</button></a>
   </ul>
 </body>
 </html>
